Fixed bug with expander arrow jumping to the next row after expansion.

--- a/client/sprig.css
+++ b/client/sprig.css
@@ -52,7 +52,7 @@ svg#svgBoard {
 }
 
 .expandedPane {
-  width: 96%;
+  width: 92%;
   min-width: 200px;
 }
 
